--- a/sisl.sty
+++ b/sisl.sty
@@ -20,11 +20,51 @@
 \newdimen\csize
 \csize=0.49\textwidth
 
+% Font Styles
+% title
+\def \ptitletextstyle{\Huge\bfseries\scshape}
+\def \ptitletextcolor{\color{blue!25!black}}
+% author
+\def \pauthortextstyle{\LARGE}
+\def \pauthortextcolor{\color{black}}
+% psec
+\def \psectextstyle{\LARGE\bfseries}
+\def \psectextcolor{\color{blue!25!black}}
+% psubsec
+\def \psubsectextstyle{\Large\bfseries}
+\def \psubsectextcolor{\color{blue!25!black}}
 %===============================================================================
 % Command Definitions
 %===============================================================================
 % Set column width
-\newcommand{\colwidth}[1]{\csize=#1}
+\newcommand{\setcolwidth}[1]{\csize=#1}
+
+% Set Fonts Style & Color commands
+% title
+\newcommand{\setptitlestyle}[2]{
+  \def \ptitletextstyle{#1}
+  \def \ptitletextcolor{\color{#2}}
+}
+% author
+\newcommand{\setpauthorstyle}[2]{
+  \def \pauthortextstyle{#1}
+  \def \pauthortextcolor{\color{#2}}
+}
+% psec
+\newcommand{\setpsecstyle}[2]{
+  \def \psectextstyle{#1}
+  \def \psectextcolor{\color{#2}}
+}
+% psubsec
+\newcommand{\setpsubsecstyle}[2]{
+  \def \psubsectextstyle{#1}
+  \def \psubsectextcolor{\color{#2}}
+}
+
+\newcommand{\ptitlestyle}[1]{{\ptitletextcolor{\ptitletextstyle{#1}}}}
+\newcommand{\pauthorstyle}[1]{{\pauthortextcolor{\pauthortextstyle{#1}}}}
+\newcommand{\psecstyle}[1]{{\psectextcolor{\psectextstyle{#1}}}}
+\newcommand{\psubsecstyle}[1]{{\psubsectextcolor{\psubsectextstyle{#1}}}}
 
 % Logos
 \newcommand{\logor}[1]{\def\@logor{#1}}
@@ -40,11 +80,11 @@
 \end{minipage}
 \begin{minipage}[c][][c]{0.7\textwidth}
   \begin{center}
-	\Huge{\textsc{\textbf{\@title}}}
+    \ptitlestyle{\@title}
 	
     \vspace*{0.5cm}	
 	
-	\LARGE{\@author}
+	\pauthorstyle{\@author}
   \end{center}
 \end{minipage}
 \begin{minipage}[c]{0.14\textwidth}
@@ -61,12 +101,31 @@
 
 }
 
-% Subsection Box
-\newcommand{\subsec}[2][gray]
+% Section Box
+\newcommand{\psec}[2][blue]
 {
+\begin{center}
+\begin{tikzpicture}
+  \node [rectangle, rounded corners, 
+         draw = #1!20, 
+         top color = #1!20,
+         bottom color = #1!20,
+         middle color = white,
+         minimum width  = 0.99\textwidth,
+         minimum height = 0.10\textwidth,
+         text centered
+        ] {\psecstyle{#2}};
+\end{tikzpicture}
+\end{center}
 
 \vspace*{0.5cm}
 
+}
+
+% Subsection Box
+\newcommand{\psubsec}[2][gray]
+{
+\begin{center}
 \begin{tikzpicture}
   \node [rectangle, rounded corners, 
          draw = #1!20,
@@ -77,41 +136,27 @@
          minimum width  = 0.99\textwidth,
          minimum height = 0.05\textwidth, 
          anchor = west,
-         font = \Large\bfseries
-        ] {#2};
+        ] {\psubsecstyle{#2}};
 \end{tikzpicture}
+\end{center}
 
 \vspace*{0.5cm}
 
 }
-  
+
 %===============================================================================
 % Environment Definitions
 %===============================================================================
 % Args: Title, box color (optional)
-\newenvironment{mainbox}[2][blue]
+\newenvironment{psecbox}[2][blue]
 {\begin{minipage}[t]{\csize}
-    \begin{center}
-      \begin{tikzpicture}
-        \node [rectangle, rounded corners,
-               draw = #1!20, 
-               top color = #1!20,
-               bottom color = #1!20,
-               middle color = white,
-               minimum width  = 0.99\textwidth,
-               minimum height = 0.10\textwidth,
-               text centered,
-               font = \LARGE\bfseries
-              ] {#2};
-      \end{tikzpicture}
-
-      \vspace*{0.5cm}
-      
-      \begin{minipage}[t]{0.95\textwidth}
+  \psec[#1]{#2}
+  \begin{center}
+  \begin{minipage}[t]{0.95\textwidth}
 }
 {
-      \end{minipage}
-    \end{center}
+  \end{minipage}
+  \end{center}
   \end{minipage}}
 
 \endinput
