--- a/poster.tex
+++ b/poster.tex
@@ -28,7 +28,7 @@ University of Trento, Italy
 %\setptitlestyle{\Huge\bfseries\scshape}{blue!25!black}
 %\setpauthorstyle{\LARGE}{black}
 %\setpsecstyle{\LARGE\bfseries}{blue!25!black}
-\setpsubsecstyle{\Large\bfseries\itshape}{blue!25!black}
+%\setpsubsecstyle{\Large\bfseries}{blue!25!black}
 
 \begin{document}
 
