Added new commands
Added commands to control height of spec and psubsec boxes

--- a/poster.tex
+++ b/poster.tex
@@ -5,6 +5,10 @@
 % Set column width: default: 0.49\textwidth
 %\setcolwidth{0.32\textwidth}
 
+% Set psec & psubsec heights
+%\setpsecheight{0.05\textwidth} % or other units
+%\setpsubsecheight{2cm}
+
 % Set Logos (left & right)
 \logol{img/sisl.eps}
 \logor{img/logo.eps}
