--- a/sisl.sty
+++ b/sisl.sty
@@ -20,6 +20,14 @@
 \newdimen\csize
 \csize=0.49\textwidth
 
+% default psec height
+\newdimen\psecheight
+\psecheight=0.05\textwidth
+
+% default psubsec height
+\newdimen\psubsecheight
+\psubsecheight=0.025\textwidth
+
 % Font Styles
 % title
 \def \ptitletextstyle{\Huge\bfseries\scshape}
@@ -38,6 +46,12 @@
 %===============================================================================
 % Set column width
 \newcommand{\setcolwidth}[1]{\csize=#1}
+
+% Set psec height
+\newcommand{\setpsecheight}[1]{\psecheight=#1}
+
+% Set psubsec height
+\newcommand{\setpsubsecheight}[1]{\psubsecheight=#1}
 
 % Set Fonts Style & Color commands
 % title
@@ -112,7 +126,7 @@
          bottom color = #1!20,
          middle color = white,
          minimum width  = 0.99\textwidth,
-         minimum height = 0.10\textwidth,
+         minimum height = \psecheight,
          text centered
         ] {\psecstyle{#2}};
 \end{tikzpicture}
@@ -134,14 +148,12 @@
          middle color = white,
          text width     = 0.90\textwidth,
          minimum width  = 0.99\textwidth,
-         minimum height = 0.05\textwidth, 
+         minimum height = \psubsecheight, 
          anchor = west,
         ] {\psubsecstyle{#2}};
 \end{tikzpicture}
 \end{center}
-
-\vspace*{0.5cm}
-
+%\vspace*{0.5cm}
 }
 
 %===============================================================================
